# mineros

./: .gitignore  README.md  app.Dockerfile  betaso-database.Dockerfile  compose.yml  database.Dockerfile  main.py  pyproject.toml
.dlt/: config.toml
db/: betaso-init.sh  init.sh
docs/: olap_diagram.mmd  oltp_diagram.mmd
etl/: oltp_to_olap_pipeline.py
src/mineros/: __init__.py  app.py  data.py  env.py  loaders.py  main.py  models.py  resources.py
transformations/: README.md  dbt_project.yml
transformations/models/: dim_game.sql  dim_player.sql  dim_provider.sql  fact_game_session.sql  schema.yml
