[project]
name = "mineros"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
mineros = "mineros.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
